# widgetastic.core

./: .checkignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  modpkg.py  test_suite.yml
docs/: README.md  advanced_usage.rst  basic_usage.rst  conf.py  guidelines.rst  index.rst  internals.rst  intro.rst  ouia.rst
docs/examples/: README.md  __init__.py  browser_setup.py  conftest.py
docs/examples/basic-widgets/: checkbox.py  colourinput.py  fileinput.py  image.py  select_widget.py  text_widget_basic.py  textinput_state_management.py
docs/examples/fill-strategies/: strategy_inheritance_examples.py  wait_fill_strategy_examples.py
docs/examples/getting-started/: batch_fill_example.py  first_script.py  test_installation.py
docs/examples/iframe-handling/: basic_iframe.py  context_isolation.py  nested_iframe.py
docs/examples/ouia/: creating_ouia_views.py  creating_ouia_widgets.py  ouia_complete_example.py  ouia_safety_attribute.py
docs/examples/table-widget/: accessing_cells.py  associative_column_filling.py  basic_table_reading.py  complex_table_merged_cells.py  finding_rows.py  table_with_widgets.py
docs/examples/version-picking/: version_picking.py
docs/examples/views/: basic_view.py  batch_operations.py  conditional_switchable_view.py  nested_parametrized_view.py  nested_view_inner_classes.py  parametrized_view.py  parametrized_view_iteration.py  root_locator_scoping.py  simple_conditional_widget.py  view_state_checking.py
docs/examples/window-management/: basic_windows_management.py  handling_popups.py
docs/getting-started/: concepts.rst  first-steps.rst  installation.rst
docs/source/: modules.rst  widgetastic.rst  widgetastic.widget.rst
docs/tutorials/: basic-widgets.rst  guidelines.rst  index.rst  ouia.rst  table-widget.rst  version-picking.rst  views.rst  window-management.rst
new-docs/: README.md  conf.py  index.rst
new-docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
new-docs/_build/html/.doctrees/: environment.pickle  index.doctree
new-docs/_build/html/.doctrees/api-reference/: index.doctree
new-docs/_build/html/.doctrees/getting-started/: concepts.doctree  first-steps.doctree  installation.doctree
new-docs/_build/html/.doctrees/quickstart/: basic-example.doctree  common-patterns.doctree  index.doctree
new-docs/_build/html/.doctrees/tutorials/: advanced-widgets.doctree  basic-widgets.doctree  browser-methods.doctree  custom-widgets.doctree  fill-strategies.doctree  iframe-handling.doctree  index.doctree  ouia-automation.doctree  version-picking.doctree  views-and-navigation.doctree  window-management.doctree
new-docs/_build/html/_sources/getting-started/: first-steps.rst.txt
new-docs/_build/html/_sources/quickstart/: basic-example.rst.txt  index.rst.txt
new-docs/_build/html/_sources/tutorials/: advanced-widgets.rst.txt  basic-widgets.rst.txt  browser-methods.rst.txt  custom-widgets.rst.txt  fill-strategies.rst.txt  version-picking.rst.txt  window-management.rst.txt
new-docs/_build/html/_static/: documentation_options.js
new-docs/_build/html/api-reference/: index.html
new-docs/_build/html/getting-started/: concepts.html  first-steps.html  installation.html
new-docs/_build/html/quickstart/: basic-example.html  common-patterns.html  index.html
new-docs/_build/html/tutorials/: advanced-widgets.html  basic-widgets.html  browser-methods.html  custom-widgets.html  fill-strategies.html  iframe-handling.html  index.html  ouia-automation.html  version-picking.html  views-and-navigation.html  window-management.html
new-docs/api-reference/: index.rst
new-docs/examples/: README.md  browser_setup.py
new-docs/examples/basic-widgets/: textinput_basic.py  textinput_different_types.py
new-docs/examples/fill-strategies/: default_fill_strategy_examples.py
new-docs/examples/getting-started/: first_script.py  test_installation.py
new-docs/examples/iframe-handling/: basic_iframe.py  nested_iframe.py
new-docs/examples/table-widget/: accessing_cells.py  associative_column_filling.py  table_with_widgets.py
new-docs/examples/version-picking/: version_picking.py
new-docs/examples/views/: nested_view_attribute_assignment.py  view_lifecycle_hooks.py
new-docs/examples/window-management/: handling_popups.py
new-docs/getting-started/: concepts.rst  first-steps.rst  installation.rst
new-docs/quickstart/: common-patterns.rst
new-docs/tutorials/: basic-widgets.rst  browser-methods.rst  fill-strategies.rst  guidelines.rst  iframe-handling.rst  index.rst  ouia-automation.rst  ouia.rst  table-widget.rst  version-picking.rst  views-and-navigation.rst  views.rst  window-management.rst
src/widgetastic/: browser.py  exceptions.py  locator.py  log.py  ouia.py  table.py  types.py  utils.py  widget.py  xpath.py
src/widgetastic/core/: browser.py  exceptions.py  log.py  utils.py  widget.py
src/widgetastic/ouia/: __init__.py  checkbox.py  input.py  text.py
src/widgetastic/widget/: __init__.py  base.py  checkbox.py  iframe.py  image.py  input.py  select.py  table.py  text.py
testing/: conftest.py  iframe_page.html  iframe_page2.html  ouia_widgets.py  test_basic_widgets.py  test_browser.py  test_fillable.py  test_foo.py  test_iframe.py  test_locator.py  test_log.py  test_ouia.py  test_table.py  test_utils.py  test_version.py  test_version_pick.py  test_view.py  test_widget.py  test_widget_descriptor.py  test_window_manager.py  test_xpath.py  testing_page.html
testing/html/: external_test_page.html  iframe_page.html  iframe_page2.html  popup_test_page.html  testing_page.html
