[project]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
description = "Making testing of UIs fantastic."
dynamic = ["version"]
keywords = ["widgetastic", "selenium"]
license = {file = "LICENSE"}
maintainers = [{name = "Dmitrii Misharov", email = "misharov@redhat.com"}]
name = "widgetastic"
readme = "README.rst"
requires-python = ">=3.8"

dependencies = [
  "anytree",
  "cached_property",
  "selenium >= 4.0.0",
  "selenium-smart-locator",
  "typing_extensions",
  "wait_for",
]

[project.optional-dependencies]
dev = [
  "podman",
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]
docs = ["sphinx"]
test = [
  "podman",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]

[project.urls]
repository = "https://github.com/RedHatQE/widgetastic.core"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/widgetastic"]

[tool.hatch.version]
source = "vcs"
