[project]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
description = "Making testing of UIs fantastic."
dynamic = ["version"]
keywords = ["widgetastic", "playwright", "ui-testing", "automation"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Mike Shriver", email = "mshriver@redhat.com"},
  {name = "Nikhil Dhandre", email = "ndhandre@redhat.com"},
  {name = "Egor Shamardin", email = "eshamard@redhat.com"},
]
name = "widgetastic.core"
readme = "README.rst"
requires-python = ">=3.10"

dependencies = [
  "anytree >= 2.9.0",
  "cached_property",
  "playwright >= 1.54.0",
  "wait_for",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-autobuild",
  "sphinx_rtd_theme",
]
test = [
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]

[project.urls]
repository = "https://github.com/RedHatQE/widgetastic.core"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/widgetastic"]

[tool.hatch.build.targets.sdist]
packages = ["src/widgetastic"]


[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
split-on-trailing-comma = true
