[metadata]
name = widgetastic.core
author = Milan Falesnik
author_email = mfalesni@redhat.com
maintainer = Pete Savage
maintainer_email = psavage@redhat.com
description = Making testing of UIs fantastic
long_description= file: README.rst
license = Apache license
url = https://github.com/RedHatQE/widgetastic.core
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
install_requires =
    anytree
    cached_property
    jsmin
    pytest
    selenium
    selenium-smart-locator
    wait_for
setup_requires = setuptools_scm
package_dir =
    =src
packages = find:

[options.extras_require]
development =
    pre-commit
    tox
    tox-docker
    tox-gh-actions

[options.packages.find]
where = src

[flake8]
max-line-length = 100
ignore = E128,E811,W503,W504,E203
