[metadata]
name = widgetastic.core
author = Milan Falesnik
author_email = mfalesni@redhat.com
maintainer = Dmitrii Misharov
maintainer_email = misharov@redhat.com
description = Making testing of UIs fantastic
long_description = file: README.rst
license = Apache license
url = https://github.com/RedHatQE/widgetastic.core
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.8
install_requires =
    anytree
    cached_property
    pytest
    selenium >= 4.0.0
    selenium-smart-locator
    typing_extensions
    wait_for
setup_requires = setuptools_scm
package_dir =
    =src
packages = find:

[options.extras_require]
test =
    podman
    pytest
    pytest-xdist
    pytest-cov
dev =
    podman
    pre-commit
    pytest
    pytest-xdist
    pytest-cov
docs =
    sphinx
[options.packages.find]
where = src

[flake8]
max-line-length = 100
ignore = E128,E811,W503,W504,E203
